crates/monochange/tests/snapshots/cli_clap_help__clap_long_help__monochange_create.snap
---
source: crates/monochange/tests/cli_clap_help.rs
expression: render_help_snapshot(&path)
---
Version: [current]
Command: monochange create

Create a changeset file for one or more packages

[1m[97mUsage:[0m monochange create [--dry-run] [--interactive] [--package <PACKAGE>] [--bump <BUMP>] [--version <VERSION>] [--reason <REASON>] [--type <TYPE>] [--details <DETAILS>] [--output <PATH>]

[1m[96mOptions:[0m
  [93m-h[0m, [93m--help[0m
          Print help

[1m[96mRelease Options:[0m
      [93m--dry-run[0m
          Run the command in dry-run mode when supported

[1m[96mOptions:[0m
  [93m-i[0m, [93m--interactive[0m
          Collect changeset fields with an interactive prompt

      [93m--package[0m[95m [0m[95m<PACKAGE>[0m
          Limit the operation to one or more package ids

      [93m--bump[0m[95m [0m[95m<BUMP>[0m
          Semver bump to request for the selected packages

          [possible values: major, minor, patch, none]

      [93m--version[0m[95m [0m[95m<VERSION>[0m
          Explicit version associated with this changeset

      [93m--reason[0m[95m [0m[95m<REASON>[0m
          Short outcome-focused summary for the changeset

      [93m--type[0m[95m [0m[95m<TYPE>[0m
          Configured changeset type, which selects bump and changelog stream

      [93m--details[0m[95m [0m[95m<DETAILS>[0m
          Additional changeset details or migration guidance

      [93m--output[0m[95m [0m[95m<PATH>[0m
          Write the complete result to this path

[1m[96mGlobal Options:[0m
  [93m-q[0m, [93m--quiet[0m
          Suppress result, progress, and diagnostic output without changing execution

  [93m-v[0m, [93m--verbose[0m
          Show full result lists and logs, every step timing, and progress notes

      [93m--progress-format[0m[95m [0m[95m<FORMAT>[0m
          Control progress output on stderr

          [possible values: auto, unicode, ascii, json]

      [93m--jq[0m[95m [0m[95m<EXPRESSION>[0m
          Filter explicit JSON output; requires `--format json` or `--format json-min`

      [93m--snapshot[0m
          Print a normalized JSON snapshot for this command subtree
