crates/monochange/tests/snapshots/cli_clap_help__clap_long_help__monochange_lint_new.snap
---
source: crates/monochange/tests/cli_clap_help.rs
expression: render_help_snapshot(&path)
---
Version: [current]
Command: monochange lint new

Scaffold a new lint rule in an ecosystem crate

[1m[97mUsage:[0m [93mmonochange lint new[0m [95m[OPTIONS][0m [95m<id>[0m

[1m[96mArguments:[0m
  [95m<id>[0m
          New lint id in the form <ecosystem>/<rule-name>

[1m[96mOptions:[0m
  [93m-h[0m, [93m--help[0m
          Print help

[1m[96mGlobal Options:[0m
  [93m-q[0m, [93m--quiet[0m
          Suppress result, progress, and diagnostic output without changing execution

  [93m-v[0m, [93m--verbose[0m
          Show full result lists and logs, every step timing, and progress notes

      [93m--progress-format[0m[95m [0m[95m<FORMAT>[0m
          Control progress output on stderr

          [possible values: auto, unicode, ascii, json]

      [93m--jq[0m[95m [0m[95m<EXPRESSION>[0m
          Filter explicit JSON output; requires `--format json` or `--format json-min`

      [93m--snapshot[0m
          Print a normalized JSON snapshot for this command subtree

Examples:
  monochange lint new cargo/no-path-dependencies
  monochange lint new npm/require-package-manager
